# tebasstorm

./: .gitignore  LICENSE  README.md  comite-2025-26-edition-2.yaml  pyproject.toml
data/: trading.csv
nb/: tebas_report.ipynb
src/tebasstorm/: laliga.py
