[project]
name = "tebasstorm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Josep Maria Sanz Xicola", email = "jsanz83@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.3",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pyautogui>=0.9.54",
    "pytesseract>=0.3.13",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
